code review: begin applying comments