@@ -27,13 +27,13 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URLClassLoader;
 import java.util.Collection;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
- * Ibex initializes HiPE in a way that doesnt allow the flexibility for it to be called "as a library". So we override and override and override...
+ * Ibex initializes HiPE in a way that doesn't allow the flexibility for it to be called "as a library".
+ * So we override and override and override...
  * This is not part of the thesis and it is unsure if this is even used in the evaluation...
  */
 public class VitruviusHiPETGGEngine extends HiPETGGEngine {
@@ -45,31 +45,21 @@ public class VitruviusHiPETGGEngine extends HiPETGGEngine {
         super();
     }
 
-//    public HiPETGGEngine(IHiPEEngine engine) {
-//        super(engine);
-//    }
-
     @Override
     public void initialise(IbexExecutable executable, IbexOptions options, EPackage.Registry registry, IMatchObserver matchObserver) {
         // the following is copied from the superclass but with changes where necessary (path stuff)
         /*
             Changes to this method compared to the superclass:
             1. Set fields via reflection that are private in the superclass. Object orientation at its best.
-            2. Not use the hardcoded crap to find ibex-patterns but make it relative to the workspacePath in the given IbexOptions
+            2. Not use the hardcoded stuff to find ibex-patterns but make it relative to the workspacePath in the given IbexOptions
             3. load project-specific classes that ibex generates in the respective eclipse project which HiPE requires to function
          */
         super.initialise(registry, matchObserver);
         this.options = options;
-//        this.executable = executable;
         setPrivateSuperclassField("options", options);
         setPrivateSuperclassField("executable", executable);
         String cp = "";
 
-//        String path = executable.getClass().getProtectionDomain().getCodeSource().getLocation().getPath();
-//        // this is a fix for situation where emoflon is executed within an eclipse plugin
-//        if(!path.contains("bin/"))
-//            path += "bin/";
-//        path +=  generateHiPEClassName().replace(".", "/").replace("HiPEEngine", "ibex-patterns.xmi");
         String path = getProjectBinDirectory() + generateHiPEClassName().replace(".", "/").replace("HiPEEngine", "ibex-patterns.xmi");
 
         File file = new File(path);
@@ -83,14 +73,12 @@ public class VitruviusHiPETGGEngine extends HiPETGGEngine {
         }
         Resource r = null;
         try {
-            //r = loadResource("file://" + executable.getClass().getProtectionDomain().getCodeSource().getLocation().getPath()+ generateHiPEClassName().replace(".", "/").replace("HiPEEngine", "ibex-patterns.xmi"));
             r = loadResource("file://" + cp);
         } catch (Exception e) {
             e.printStackTrace();
         }
 
-        IBeXModel ibexModel = (IBeXModel)r.getContents().get(0);
-//        ibexPatterns = ibexModel.getPatternSet();
+        IBeXModel ibexModel = (IBeXModel)r.getContents().getFirst();
         //
         IBeXPatternSet ibexPatterns = ibexModel.getPatternSet();
         logger.info("ibexPatterns: " + ibexPatterns.getContextPatterns());
@@ -111,27 +99,19 @@ public class VitruviusHiPETGGEngine extends HiPETGGEngine {
     @SuppressWarnings("unchecked")
     protected void initEngine(final Collection<Resource> resources) {
         if(engine == null) {
-            Class<? extends IHiPEEngine> engineClass = null;
+            Class<? extends IHiPEEngine> engineClass;
             try {
-                // TODO this little bastard !
-//                engineClass = (Class<? extends IHiPEEngine>) Class.forName(engineClassName);
                 this.getClass().getClassLoader().loadClass("hipe.network.HiPENetwork");
                 engineClass = loadIbexProjectSpecificClass(new File(getProjectBinDirectory()), engineClassName);
                 engineClass.getClassLoader().loadClass("hipe.network.HiPENetwork");
                 engineClass.getClassLoader().loadClass("HiPENetwork");
             } catch (ClassNotFoundException e1) {
-//                e1.printStackTrace();
                 throw new RuntimeException(e1);
             }
 
             try {
-                if(engineClass == null) {
-                    throw new RuntimeException("Engine class: "+engineClassName+ " -> not found!");
-                }
-//                engineClass.getDeclaredConstructor();
                 Constructor<? extends IHiPEEngine> constructor = engineClass.getConstructor();
                 constructor.setAccessible(true);
-
                 engine = constructor.newInstance();
             } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
                      SecurityException | IllegalArgumentException | InvocationTargetException e) {
@@ -158,21 +138,19 @@ public class VitruviusHiPETGGEngine extends HiPETGGEngine {
             Map<String, ProductionResult> extractData = this.engine.extractData();
             this.getTimes().addTo("findMatches", Timer.stop());
 
-            //my shit
             for(String patternName : extractData.keySet()) {
                 if (this.patterns.get(patternName) != null) {
-                    String pName = (String)this.patterns.get(patternName);
+                    String pName = this.patterns.get(patternName);
                     logger.debug("In VitruviusHiPETGGEngine: pattern debug: patternName=" + patternName + ", pName=" + pName + ", productionMatchesNames: " +
                             extractData.get(patternName).getNewMatches().stream().map(productionMatch -> productionMatch.patternName).collect(Collectors.joining(", ")));
 
-                    Collection<ProductionMatch> matches = ((ProductionResult)extractData.get(patternName)).getNewMatches();
+                    Collection<ProductionMatch> matches = extractData.get(patternName).getNewMatches();
                     matches.stream().map((m) -> this.createMatch(m, pName)).forEach( match -> {
                         logger.debug("  - HIPE MATCH: [" + match.getPatternName() + "] params= ");
                         match.getParameterNames().forEach(paramName -> logger.debug("    - " + paramName + "=" + Util.eObjectToString(match.get(paramName))));
                     });
                 }
             }
-
 
             this.addNewMatches(extractData);
             this.deleteInvalidMatches(extractData);
@@ -182,33 +160,10 @@ public class VitruviusHiPETGGEngine extends HiPETGGEngine {
 
     }
 
-    /**
-     * Example:
-     *  <li> directory = C:\Users\XPS-15\eclipse-workspace\Something2Else\bin
-     *  <li> classNames = [Something2Else.sync.hipe.engine.HiPEEngine]
-     *
-     * @param directory directory which reflects the package structures of the classes to load
-     * @param classNames
-     */
-    private void loadIbexProjectSpecificClasses(final File directory, Collection<String> classNames) {
-        try {
-            ClassLoader classLoader = new URLClassLoader(
-                    new URL[]{directory.toURI().toURL()},
-                    this.getClass().getClassLoader());
-            for (String className : classNames) {
-                classLoader.loadClass(className);
-                Class.forName(className);
-            }
-        } catch (MalformedURLException | ClassNotFoundException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
     private Class loadIbexProjectSpecificClass(final File directory, String className) throws ClassNotFoundException {
         try {
             //class loader should have access to this CL's classes as well as the ibex project
-            return new PfuschURLClassLoader(
-//            return new URLClassLoader(
+            return new SimpleNameSupportingURLClassLoader(
                     new URL[]{directory.toURI().toURL()},
                     this.getClass().getClassLoader())
                 .loadClass(className);
